fixed overflow

--- a/styles/about_page.module.scss
+++ b/styles/about_page.module.scss
@@ -19,6 +19,7 @@
 }
 
 .content_wrapper {
+  overflow: hidden;
   @include mobile() {
     padding: 0 sizes.$md;
   }
