--- a/styles/contact_page.module.scss
+++ b/styles/contact_page.module.scss
@@ -17,6 +17,7 @@
   }
 
   .contact_container {
+    overflow: hidden;
     font-family: fonts.$manrope;
     display: flex;
     flex-direction: column;
